#
# Copyright 2018        UT-Battelle, LLC
#                       All rights reserved.
#
# See COPYING in top-level directory.
# 
# Additional copyrights may follow
# 
# $HEADER$
#

SUBDIRS = src include bin examples

EXTRA_DIST =    \
    COPYING     \
    INSTALL     \
    README.md

ACLOCAL_AMFLAGS = -I m4
