#
# Copyright 2018        UT-Battelle, LLC
#                       All rights reserved.
#
# See COPYING in top-level directory.
# 
# Additional copyrights may follow
# 
# $HEADER$
#

bin_PROGRAMS = basic

basic_SOURCES = basic.c
basic_LDADD = 
basic_LDFLAGS = -L${prefix}/lib -lsicm
basic_CFLAGS = -I${prefix}/include
