#
# Copyright 2018        UT-Battelle, LLC
#                       All rights reserved.
#
# See COPYING in top-level directory.
# 
# Additional copyrights may follow
# 
# $HEADER$
#

bin_PROGRAMS = basic

basic_SOURCES = basic.c
basic_LDADD = 
basic_LDFLAGS = @abs_top_srcdir@/src/low/libsicm.la
basic_CFLAGS = -I@abs_top_srcdir@/include
