foreach(NUM 1 2 3 4 5)
  add_executable(test${NUM} test${NUM}.c)
  target_include_directories(test${NUM} PUBLIC ${CMAKE_SOURCE_DIR}/include/low/public)
  target_link_libraries(test${NUM} PUBLIC sicm_SHARED)
  target_link_libraries(test${NUM} PRIVATE ${JEMALLOC_LDFLAGS})
  add_test(test${NUM} test${NUM})
endforeach()
